2009-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* uielement.cpp (GetTransformToUIElementWithError): Process dirty
	elements before getting the transform matrix so that any pending
	layout changes get flushed first.

	r: lewing

2009-09-02  Jackson Harper  <jackson@ximian.com>

	* dependencyproperty.cpp: If the explicitly mentioned type does
	not contain the property, try looking for the property on the
	current lookup obejct.  Allows things like (UIElement.Height) on a
	Grid object.

	r: shana

2009-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (TextBlock::OnCollectionChanged): Explicitly call
	UpdateLayoutAttributes(). We can't rely on it being called as a
	result of setting the Text property since the overall Text
	property value might not have changed.
	(TextBlock::OnCollectionItemChanged): Same here.
	(TextBlock::OnPropertyChanged): Same for when the Inlines property
	changes. In the FontSource case, don't set invalidate to
	false. Also set dirty to true.
	(SetTextInternal): Changed to return void, no need to return bool
	anymore.

	r: alan

2009-09-01  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (TextLayoutGlyphCluster::Render): If the background
	brush is null, don't bother drawing a background.

	r: lewing

2009-09-01  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (TextLayoutGlyphCluster::Render): If the Foreground
	brush is null, don't render the text.

	r: spouliot

2009-09-01  Sebastien Pouliot  <sebastien@ximian.com> 

	* utils.cpp (CopyFileTo): Close the destination file handle if 
	the source (filename) cannot be opened.

	r: jeff

2009-09-01  Sebastien Pouliot  <sebastien@ximian.com>

	* uielement.cpp (UIElement::Paint): Don't leak a copy of the 
	region when *not* using FTB rendering.

	r: jeff

2009-09-01  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp: clear LastRenderSize before we emit so
	that we don't end up in a possible recursion.

	Fixes http://www.worldwidetelescope.org/webclient/
	
	r: toshok
